tests/neg/syntax_missing_rbrace_hint.baa
// EXPECT: متوقع '}'
// EXPECT: أغلق الكتلة بإضافة '}'
صحيح الرئيسية() {
    إرجع 0.
